@@ -1,3 +1,9 @@
+2011-12-23 Fri  Jari Aalto  <jari.aalto@cante.net>
+
+	* epackage.el (epackage-with-case-fold-search): New.
+	(epackage-package-name-library-p): New.
+	(epackage-package-name-valid-p): Use `epackage-with-case-fold-search'.
+
 2011-12-21 Thu  Jari Aalto  <jari.aalto@cante.net>
 
 	* epackage.el (epackage-date-to-iso): Tighten US format.
